--- a/_posts/2021-03-16-homework_1.markdown
+++ b/_posts/2021-03-16-homework_1.markdown
@@ -2,7 +2,13 @@
 title: "homework_1 (Reproduce Figure 1b from Baggerly and Coombes (2009))"
 ---
 
+Figure description
+========
+
 In order to get a more precise idea of the extent of the duplication, [Baggerly and Coombes (2009)](https://projecteuclid.org/journals/annals-of-applied-statistics/volume-3/issue-4/Deriving-chemosensitivity-from-cell-lines--Forensic-bioinformatics-and-reproducible/10.1214/09-AOAS291.full) examined all pairwise sample correlations for Adria_ALL.txt. Figure 1(b) highlighted pairs with correlations above 0.9999 (duplicates). Circles indicated duplicates with consistent labels; triangles indicated duplicates where the same sample was labeled sensitive in one column and resistant in the other. 
+
+Reproduction
+========
 
 To reproduce this figure, we read the data "Adria_ALL.txt" first. This file contains 144 samples (22 training samples and 122 validation samples). There are two header rows. The first Row indicates whether the column is training (Adria) or testing (Validation). The second row indicates whether the column is Sens or Resistant (training) or Resp or NR (testing). 
 In the training set, 0 denotes resistant and 1 denotes sensitive. There are 10 columns labeled as resistant, and 12 columns labeled as sensitive. The test (validation) data is all labeled 2, regardless of status. The test data contains 99 NR (resistant) samples and 23 Resp (sensitive) samples.
